Fix image alignment

--- a/src/lwc/gsChecklistItem/gsChecklistItem.css
+++ b/src/lwc/gsChecklistItem/gsChecklistItem.css
@@ -16,6 +16,7 @@
     padding-left: 6px;
     padding-right: 24px;
     border-right: 1px solid lightgray;
+    align-self: center;
 }
 
 .item-card .card-image img {
